[package]
name = "jvm-function-invoker-buildpack"
version = "0.1.0"
authors = ["Manuel Fuchs <manuel.fuchs@salesforce.com>"]
edition = "2018"

[dependencies]
libcnb = { path = "../libcnb.rs" }
serde = "1.0.126"
toml = "0.5.8"
sha2 = "0.9.5"
thiserror = "1.0.25"
reqwest = { version = "0.11.3", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
termcolor = "1.1.2"
indoc = "1.0.3"
